--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
 layout: default
+title: Page Not Found
 ---
 
 <style type="text/css" media="screen">
@@ -8,6 +9,7 @@ layout: default
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
+    padding: 2rem;
   }
   h1 {
     margin: 30px 0;
@@ -17,9 +19,10 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="container" role="alert">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
+  <p><strong>Page not found</strong></p>
   <p>The requested page could not be found.</p>
+  <p><a href="/">Return to home page</a></p>
 </div>
